# rust-flight-info

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
marshaling/: Cargo.toml
marshaling/src/: lib.rs
networking/src/: lib.rs
old/: Cargo.toml
old/src/: main.rs
old/src/client/: mod.rs
old/src/model/: flight_info.rs  mod.rs  query.rs
old/src/server/: mod.rs
old/src/server/services/: error.rs  mod.rs  query_flight_details.rs  query_flight_identifiers.rs  register_for_updates.rs  reserve_seats.rs
server/: Cargo.toml
server/src/: main.rs
