[package]
name = "rust-flight-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = "0.4.23"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"